--- a/WireFrame/style.css
+++ b/WireFrame/style.css
@@ -1,26 +1,35 @@
-h{
+h {
     text-align: center;
     width: 100%;
-    height:100px;
+    height: 100px;
     background-color: blue;
     display: inline-block;
     font-size: 30px;
     border: dashed;
-
 }
 
-.IMGS{
-    width: 25%;
-    height: 25%;
-    display: inline-block;
+.IMGS {
+    display: flex;               /* Use flexbox for layout */
+    justify-content: center;     /* Center images horizontally */
+    align-items: center;         /* Center images vertically */
+    height: 100vh;               /* Ensure the container takes full viewport height */
+    gap: 10px;                   /* Optional: Add space between the images */
 }
 
+.IMGS img {
+    width: 30%;   /* Set width of the images */
+    height: auto; /* Maintain aspect ratio of images */
+}
 
-p1{
+p1 {
     width: 30%;
-    height: 500px;
-    text-align: right;
+    height: 100px;
+    text-align: center;
     background-color: rgb(0, 174, 255);
     display: inline-block;
     border: dashed;
+}
+
+p2 {
+    margin-right: 90%;
 }
